[O] Remove unnecessarily long constructors